--- a/Massivestars_WISE.ipynb
+++ b/Massivestars_WISE.ipynb
@@ -737,7 +737,9 @@
     "# Vizualization produced using Partiview\n",
     "### Thanks to Jonathan Gagné and Jackie Faherty\n",
     "The color scheme represents stellar colors (in some range). Some OB association have been added as shaded blobs, as well as a galactic background model. \n",
-    "Better watched full screen, settings: speed 0.5 and quality 720p60"
+    "Better watched full screen, settings: speed 0.5 and quality 720p60\n",
+    "\n",
+    "Link to [video](https://www.youtube.com/embed/jY-2towHHaY)"
    ]
   },
   {
