--- a/Massivestars_WISE.ipynb
+++ b/Massivestars_WISE.ipynb
@@ -127,7 +127,7 @@
     "plt.axhline(y=-1, color='black', linestyle=':')\n",
     "plt.axis([4.8, 3.2, 3, -13])\n",
     "plt.xlabel('log Teff')\n",
-    "plt.ylabel('log L')\n",
+    "plt.ylabel('WISE1 Abs Mag')\n",
     "plt.title('MIST Isochronse at Solar Metallicity')\n",
     "cbar = plt.colorbar()\n",
     "cbar.ax.set_ylabel(r'M$_{\\rm ini}$ / M$_\\odot$')\n",
