--- a/Massivestars_WISE.ipynb
+++ b/Massivestars_WISE.ipynb
@@ -64,7 +64,7 @@
     }
    ],
    "source": [
-    "isocmd = read_mist_models.ISOCMD(\"MIST_v1.1_feh_p0.00_afe_p0.0_vvcrit0.0_WISE.iso.cmd\") "
+    "isocmd = read_mist_models.ISOCMD(\"data/MIST_v1.1_feh_p0.00_afe_p0.0_vvcrit0.0_WISE.iso.cmd\") "
    ]
   },
   {
@@ -187,7 +187,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "ds = vx.open('ALLWISEColorCut.hdf5')"
+    "ds = vx.open('data/ALLWISEColorCut.hdf5')"
    ]
   },
   {
@@ -752,7 +752,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -766,7 +766,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
