--- a/Massivestars_WISE.ipynb
+++ b/Massivestars_WISE.ipynb
@@ -531,10 +531,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 96,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
     "## CMD After cut in Galactic Latitude"
    ]
@@ -602,6 +600,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# With help from Adrian http://adrian.pw! \n",
     "sc2 = coord.SkyCoord(ra=mra* u.degree,dec=mdec* u.degree,\n",
     "                     distance=coord.Distance(parallax=u.mas*par_))"
    ]
@@ -640,7 +639,7 @@
     "plt.xlabel('$x$ [kpc]')\n",
     "plt.ylabel('$y$ [kpc]')\n",
     "cbar = plt.colorbar()\n",
-    "cbar.ax.set_ylabel(r'W1 Mag')\n"
+    "cbar.ax.set_ylabel(r'W1 Mag')"
    ]
   },
   {
